@@ -68,6 +68,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     void cmd_memory(void);
     void cmd_mid(void);
     void cmd_mkdir(void);
+    void cmd_mode(void);
     void cmd_open(void);
     void cmd_option(void);
     void cmd_pause(void);
@@ -124,7 +125,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     { "Cursor",     T_CMD,              0, cmd_cursor   },
     { "Math",       T_CMD,              0, cmd_math     },
     { "Memory",     T_CMD,              0, cmd_memory   },
-    { "Mode",       T_CMD,              0, cmd_dummy    },
+    { "Mode",       T_CMD,              0, cmd_mode     },
     { "Page",       T_CMD,              0, cmd_dummy    },
     { "Play",       T_CMD,              0, cmd_dummy    },
     { "Poke",       T_CMD,              0, cmd_poke     },
